fix: fixed scaling issue/miss-alignment issue with number and letter axis

--- a/src/style.css
+++ b/src/style.css
@@ -39,12 +39,12 @@ body {
 .grid-container {
     display: grid;
     background-color: white;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(10, 1fr);
+    grid-template-columns: repeat(11, 1fr);
+    grid-template-rows:repeat(11, 1fr);
     width: 450px;
     height: 450px;
-    grid-column: 2/3;
-    grid-row: 2/3;
+    grid-row: 1/2;
+    grid-column: 1/2;
 }
 
 .censor {
@@ -52,10 +52,13 @@ body {
     background-color: lightgrey;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
-    width: 450px;
-    height: 450px;
-    grid-column: 2/3;
-    grid-row: 2/3;
+    width: 410px;
+    height: 410px;
+    grid-row: 1/2;
+    grid-column: 1/2;
+    position:relative;
+    left: 41px;
+    top: 41px;
 }
 
 .grid-container > div, .censor > div {
@@ -70,8 +73,8 @@ body {
 .grid-container.option {
     display: grid;
     background-color: white;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(10, 1fr);
+    grid-template-columns: repeat(11, 1fr);
+    grid-template-rows: repeat(11, 1fr);
     width: 300px;
     height: 300px;
     grid-column: 2/3;
@@ -87,32 +90,141 @@ body {
     text-shadow: none;
 }
 
-.number-axis.option {
-    font-size: 1.2rem;
-    display: flex;
-    grid-row: 1/2;
-    grid-column: 2/3;
-    justify-content: start;
-    align-content: center;
-    margin-left: 10px;
-    gap: 17.6px;
-}
-
-.letter-axis.option {
-    font-size: 1rem;
-    display: flex;
-    flex-direction: column;
+.A-letter-axis {
     grid-row: 2/3;
     grid-column: 1/2;
-    align-items: center;
-    justify-content: start;
-    gap: 7.8px;
 }
+
+.B-letter-axis {
+    grid-row: 3/4;
+    grid-column: 1/2;
+}
+
+.C-letter-axis {
+    grid-row: 4/5;
+    grid-column: 1/2;
+}
+
+.D-letter-axis {
+    grid-row: 5/6;
+    grid-column: 1/2;
+}
+
+.E-letter-axis {
+    grid-row: 6/7;
+    grid-column: 1/2;
+}
+
+.F-letter-axis {
+    grid-row: 7/8;
+    grid-column: 1/2;
+}
+
+.G-letter-axis {
+    grid-row: 8/9;
+    grid-column: 1/2;
+}
+
+.H-letter-axis {
+    grid-row: 9/10;
+    grid-column: 1/2;
+}
+
+.I-letter-axis {
+    grid-row: 10/11;
+    grid-column: 1/2;
+}
+
+.J-letter-axis {
+    grid-row: 11/12;
+    grid-column: 1/2;
+}
+
+.number-axis-1 {
+    grid-row: 1/2;
+    grid-column: 2/3;
+}
+
+.number-axis-2 {
+    grid-row: 1/2;
+    grid-column: 3/4;
+}
+
+.number-axis-3 {
+    grid-row: 1/2;
+    grid-column: 4/5;
+}
+
+.number-axis-4 {
+    grid-row: 1/2;
+    grid-column: 5/6;
+}
+
+.number-axis-5 {
+    grid-row: 1/2;
+    grid-column: 6/7;
+}
+
+.number-axis-6 {
+    grid-row: 1/2;
+    grid-column: 7/8;
+}
+
+.number-axis-7 {
+    grid-row: 1/2;
+    grid-column: 8/9;
+}
+
+.number-axis-8 {
+    grid-row: 1/2;
+    grid-column: 9/10;
+}
+
+.number-axis-9 {
+    grid-row: 1/2;
+    grid-column: 10/11;
+}
+
+.number-axis-10 {
+    grid-row: 1/2;
+    grid-column: 11/12;
+}
+
+.empty-cell {
+    grid-row: 1/2;
+    grid-column: 1/2;
+}
+
+.grid-container > div.empty-cell,
+.grid-container > div.A-letter-axis,
+.grid-container > div.B-letter-axis,
+.grid-container > div.C-letter-axis,
+.grid-container > div.D-letter-axis,
+.grid-container > div.E-letter-axis,
+.grid-container > div.F-letter-axis,
+.grid-container > div.G-letter-axis,
+.grid-container > div.H-letter-axis,
+.grid-container > div.I-letter-axis,
+.grid-container > div.J-letter-axis,
+.grid-container > div.number-axis-1,
+.grid-container > div.number-axis-2,
+.grid-container > div.number-axis-3,
+.grid-container > div.number-axis-4,
+.grid-container > div.number-axis-5,
+.grid-container > div.number-axis-6,
+.grid-container > div.number-axis-7,
+.grid-container > div.number-axis-8,
+.grid-container > div.number-axis-9,
+.grid-container > div.number-axis-10 {
+    border: none;
+    text-shadow: none;
+}
+
 
 .board-container.option {
     display: grid;
-    grid-template-columns: 50px 1fr;
-    grid-template-rows: auto 1fr;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
 }
 
 .content-container {
@@ -251,31 +363,10 @@ input:valid {
 
 .board-container.player1, .board-container.player2 {
     display: grid;
-    grid-template-columns: 50px 1fr;
-    grid-template-rows: auto 1fr;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
 }
 
-.letter-axis.player1, .letter-axis.player2 {
-    font-size: 1.7rem;
-    display: flex;
-    flex-direction: column;
-    grid-row: 2/3;
-    grid-column: 1/2;
-    align-items: center;
-    justify-content: start;
-    gap: 7.2px;
-}
-
-.number-axis.player1, .number-axis.player2 {
-    font-size: 1.7rem;
-    display: flex;
-    grid-row: 1/2;
-    grid-column: 2/3;
-    justify-content: start;
-    align-content: center;
-    margin-left: 10px;
-    gap: 28px;
-}
 
 .player1-content, .player2-content {
     display: flex;
